added rules section which will be used with js later

--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
         <button id="quiz-btn" class="rules">Click here to see the rules of this quiz</button>
     </div>
     </section>
+
+    <section>
+        <div class="rule-box" hide id="rules-of-quiz">
+            <div class="written-rules">
+                <ul class="instructions">
+                    <li>Welcome to the quiz! Here your general knowledge will be tested across a range of categories.</li>
+                    <li>There is a time limit of X seconds so don't take too long on any questions.</li>
+                    <li>Your score will be calculated below the answers so you can track your progress.</li>
+                    <li>Use your mouse to select your answer or tap your answer on your touch screen.</li>
+                    <li>You cannot pass on a question and must answer the current question to move onto the next one.</li>
+                    <li>Enjoy the quiz and feel free to retry!</li>
+                </ul>
+                <div class="start-quiz">
+                    <button id="start-quiz-btn" class="start-btn">Begin the Quiz!</button>
+                </div>
+            </div>
+        </div>
+    </section>
   
 
     <div class="container">
