--- a/index.html
+++ b/index.html
@@ -56,6 +56,35 @@
     <div class="game-controls">
         <button id="next-button" class="next-button btn">NEXT</button>
     </div>
+
+    <div class="score">
+        <p class="correct">placeholder for green tick
+        <span id="correct-answer">0
+        </span>
+        </p>
+        <p class="incorrect">placeholder for red x
+            <span id="incorrect-answer">0
+            </span>
+            </p> 
+
+    </div>
+
+    
+   <div class="try-quiz" id="try">
+            <div class="message">
+              <h2>YOUR FINAL ASSESSMENT
+              </h2> 
+            </div>
+            <div id="score" class="final-outcome">
+            </div>
+            <div class="button">
+              <button id="try-again">Try Again
+              </button>
+            </div>
+          </div>
+    </div>
+
+    <footer>Placeholder for socials</footer>
  
 </body>
 
